# zeste_vision

./: .gitignore  README.md  pyproject.toml
nb/: testbed.ipynb
src/train/: env_testing.py
src/zeste_vision/: utils.py
src/zeste_vision/analysis/: data_qa.py  occlusion.py  plot_results.py  pose_tools.py  video_labels.py  zeste_analysis.py  zeste_plot.py
src/zeste_vision/data_tools/: dataloader.py  loader.py  pose_estimator.py  test_mediapipe.py  video_labels.py  video_splitter.py  zeste_loader.py
src/zeste_vision/models/: feedback.py
src/zeste_vision/test/: env_testing.py  make_gif.py  test_loader.py
src/zeste_vision/train/: train.py  trainer.py
