[project]
name = "zeste_vision"
version = "0.1.0"
dependencies = [
    "ipykernel",
    "numpy",
    "torch",
    "torchvision",
    "torchaudio",
    "mediapipe",
    "tqdm",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
